<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background image</string>
    <string name="logo">Logo</string>
    <string name="button_desired_league">Desired League:</string>
    <string name="button_next">NEXT</string>
    <string name="toggle_button_mens">Mens</string>
    <string name="toggle_button_womens">Womens</string>
    <string name="toggle_button_co_ed">Co-Ed</string>
    <string name="background">background</string>
    <string name="i_am_a">I am a:</string>
    <string name="begginerBtn">Begginer</string>
    <string name="ballerBtn">Baller</string>
    <string name="finishBtn">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
